# smt-playground

./: .gitignore  CMakeLists.txt  main.cpp
benchmark/cnf/: t1.cnf  t2.cnf  t3.cnf
benchmark/opt/: 3135611966_492687619.smt2  3137399285_-63210496.smt2  313938897_214047577.smt2
cmake/: FindGmp.cmake
ml/: knn.cpp  knn.h
opt/: opt.cpp  opt.h  opt_util.cpp  opt_util.h
sampler/: README.md  quick_sampler.h  region_sampler.h
sat/: literal.cpp  literal.h  prop.cpp  prop.h  prop_assignment.cpp  prop_assignment.h
simplifier/: formula_reducer.cpp  formula_reducer.h  formula_stats.cpp  formula_stats.h  formula_traverser.h
smt_utils/: brute_forth.h  z3plus.h
test/: test_aufbv.h  test_load_smt.h  test_opt.h  test_qe.h  test_search.h  test_util.h
utils/: base64.cpp  base64.h  error_codes.h  file_system.h  lbool.cpp  lbool.h  popen.cpp  popen.h  pp_string.h  push_pop_cache.h  string2int.cpp  string2int.h  timer.cpp  timer.h
